# bash

./: #pathexp.c#  #pcomplete.c#  #redir.c#  ._COPYING  .gdb_history  .gitignore  .gitignore~  034-glob-globstar~  AUTHORS  AUTHORS~  CHANGES  CHANGES-4.0-beta2  CHANGES-4.1  CHANGES-4.2  CHANGES-4.2~  CHANGES-4.3  CHANGES-4.3~  CHANGES-4.4  CHANGES-5.0  CHANGES-5.1  CHANGES-5.2  CHANGES-5.3  CHANGES.autosave  CHANGES~  COMPAT  COMPAT~  COPYING  ChangeLog  INSTALL  MANIFEST  MANIFEST.doc  MANIFEST~  Makefile  Makefile.in  Makefile.in.save  Makefile.in.save1  Makefile.in~  NEWS  NEWS-3.0  NEWS-4.0  (+311 more)
.github/workflows/: apisec-scan.yml  bandit.yml  checkmarx.yml  codeql.yml  ethicalcheck.yml  sobelow.yml  synopsys-io.yml
CWRU/: #CWRU.chlog#  CWRU.chlog  CWRU.chlog~  PLATFORMS  POSIX.NOTES  POSIX.NOTES.old  README  audit-patch  changelog  devfd.c  empty-for-wordlist  intmax.c  maildir-patch
CWRU/OS-BUGS/: bsd-rshd-bug  isc-posix-bug  next-rlogind-bug  sco-3.2.4-bug  ultrix-bugs
CWRU/misc/: asort.c  aux-mach-desc  bison  copyright  endian3.c  errlist.c  hpux10-dlfcn.h  iptrt.c  open-files.c  pcat.c  pgrp.c  pid.c  rangecmp.c  sigs.c  sigs.c~  sigstat.c
CWRU/old/: parse.y.noctlnul  read.def.stdio  set.def.save  subst.c.noctlnul
CWRU/old-changelogs/: CHANGES.051093  CHANGES.071193  CWRU.chlog.v12  CWRU.chlog.v13  CWRU.chlog.v15  CWRU.chlog.v9
CWRU/old-conf/: Makefile  config.h  cpp-Makefile
CWRU/posix-parser/: Makefile  aux.c  command.h  shell.h
CWRU/save/: unwind_prot.c.sighandling  unwind_prot.h.save
autom4te-2.53.cache/: output.0  requests  traces.0
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.1t  traces.2  traces.3
bash-20060316/: COMPAT  MANIFEST  Makefile.in  POSIX  README  array.c  arrayfunc.c  bashintl.h  braces.c  command.h  config-bot.h  config-top.h  configure  configure.in  conftypes.h  dispose_cmd.c  eval.c  execute_cmd.c  externs.h  input.h~  jobs.c.diff  locale.c  mailcheck.c  make_cmd.c  mksyntax.c  parse.y.save26  patchlevel.h  pathexp.h  pathnames.h.in  pcomplete.c  pcomplete.h  pcomplib.c  quit.h  redir.h  subst.h  trap.c  trap.h  variables.c
bash-20060316/CWRU/: CWRU.chlog  CWRU.chlog~  history-syslog.1
bash-20060316/autom4te.cache/: output.0  (+1 more)
bash-20240812/: CHANGES-4.4  CHANGES-5.1  CHANGES-5.3  COMPAT  MANIFEST  Makefile.in  NEWS-5.0  NEWS-5.3  RBASH  aclocal.m4  alias.c  alias.h  arrayfunc.c  arrayfunc.h  bashline.c  bashline.h  bashtypes.h  braces.c  config-top.h  config.h.in  configure.mk  dispose_cmd.c  dispose_cmd.h  error.c  error.h  execute_cmd.c  execute_cmd.h  expr.c  findcmd.h  flags.c  flags.h  general.c  general.h  hashcmd.h  hashlib.c  hashlib.h  jobs.c  jobs.h  mailcheck.c  patchlevel.h  (+6 more)
builtins/: #Makefile.in#  #printf.def#  Makefile  Makefile.in  Makefile.in~  alias.def  alias.def~  bashgetopt.c  bashgetopt.c~  bashgetopt.h  bind.def  bind.def~  break.def  break.def~  builtin.def  builtin.def~  caller.def  caller.def~  cd.def  cd.def~  colon.def  colon.def~  command.def  command.def~  common.c  common.c~  common.h  common.h~  complete.def  complete.def~  declare.def  declare.def.1  declare.def.2  declare.def.3  declare.def~  echo.def  echo.def~  enable.def  enable.def~  eval.def  (+86 more)
cross-build/: beos-sig.h  cygwin32.cache  opennt.cache  win32sig.h
doc/: ._texinfo.tex  FAQ  FAQ-20090219  FAQ-3.0  FAQ-3.1  FAQ-3.1~  FAQ-3.2  FAQ-4.0  FAQ-4.1  FAQ-4.1~  FAQ-4.2  FAQ-4.2~  FAQ-4.3~  FAQ.new  FAQ.orig  FAQ~  INTRO  Makefile  Makefile.in  Makefile.in~  Makefile.tmp  README  aosa-bash.pdf.old  article.pt.ps  b.html  bash.0  bash.1  bash.1.orig  bash.1~  bash.html  bash.info  bash.ps  bashbug.0  bashbug.1  bashbug.ps  bashref.aux  bashref.bt  bashref.bts  bashref.cp  bashref.cps  (+40 more)
documentation/: FAQ  Makefile  README  article.ms  article.ps  article.txt  bash.1  bash.ps  bash.txt  builtins.1  builtins.ps  builtins.txt  features.dvi  features.info  features.ps  features.texi  readline.ps  readline.txt
examples/: INDEX.html  INDEX.txt  alias-conv.sh  copyright
include/: ._ansi_stdlib.h  chartypes.h  chartypes.h~  gettext.h  memalloc.h  memalloc.h.save  posixdir.h~  posixjmp.h~  posixselect.h  posixselect.h~  posixtime.h  shmbchar.h  shmbutil.h  shmbutil.h.save1  shmbutil.h~  shtty.h  shtty.h~  stdc.h  systimes.h  timer.h  typemax.h
m4/: c-bool.m4  fcntl-o.m4  gettext.m4  iconv.m4  intl.m4  lcmessage.m4  lib-prefix.m4  strtoimax.m4  threadlib.m4  unlocked-io.m4
po/: ._bg.po  ._de.po  ._fr.po  ._ga.po  ._hr.po  ._ja.po  ._nl.po  ._ru.po  ._sv.po  ._tr.po  ._zh_TW.po  LINGUAS  LINGUAS~  Makefile.in.in  Makefile.in.in~  POTFILES.in  Rules-builtins  af.gmo  af.po  bash-3.1.pot  bash-3.2.pot  bash-4.2.pot  bash-save.pot  bash.po.orig  bash.pot  bash.pot~  bg.gmo  bg.po  builtins.pot  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  diffs  el.gmo  el.po  (+78 more)
po.orig/: POTFILES.in  bash.pot  en@boldquot.gmo  en@quot.gmo  readline.po
portbash/: README  libc.sh  mkdesc.sh  pgrp.c  signals.sh  stdio.sh  strings.sh  syscalls.sh
support/: ._config.guess  Dockerfile  Makefile.in  Makefile.in~  PORTING  SYMLINKS  bash.pc.in  bashbug.sh  bashbug.sh.in  bashbug.sh.orig  bashbug.sh~  bashversion.c  bashversion.c~  checkbashisms  clone-bash  config.guess  config.guess~  config.rpath  config.sub  config.sub~  copyright-comment  deblank.sh  endian.c  fixlinks  getcppsyms.c  mail-shell  man2html.c  memtest.c  mk-takehome  mk-takehome~  mkclone  mkconffiles  mkdep  mkdep.gcc.sh  mkdep.old.sh  mkdirs  mkdist  mkdocdist  mkmachtype  mksignames.c  (+25 more)
tests/: COPYRIGHT  COPYRIGHT~  README  RUN-ONE-TEST  RUN-ONE-TEST.gprof  RUN-ONE-TEST.ksh  RUN-ONE-TEST.verb  RUN-TEST-SCRIPT  alias.right  alias.tests  alias2.sub  alias3.sub  alias4.sub  alias5.sub  alias7.sub  appendop.right  appendop.tests  appendop.tests~  arith-for.right  arith-for.tests  arith.right  arith.tests  arith.tests~  arith10.sub  arith11.sub  arith3.sub  arith5.sub  arith6.sub  arith8.sub  arith9.sub  array.right  array.right~  array.tests  array.tests~  array11.sub  array15.sub  array15.sub~  array19.sub  array21.sub  array22.sub  (+516 more)
(+1274 files in other folders)
